--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,8 +6,7 @@ import Footer from "../components/Footer.astro";
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
-        <meta name="generator" content="Astro v1.1.7" />
+        <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
         <link rel="icon" type="image/png" href="/assets/img/logo.png" />
         <title>RIGON Multiservices - IT Soluciones</title>
