google map address

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -19,7 +19,7 @@ import Layout from "../layouts/Layout.astro";
                             <li>
                                 <i class="material-icons md-22">location_on</i>
                                 <div class="footer-contact-info">
-                                    <a href={import.meta.env.GOOGLE_MAP_ADDRESS}> Santo Domingo, Distrito Nacional, R.D. 10205</a>
+                                    <a href={import.meta.env.GOOGLE_MAP_ADDRESS}> {import.meta.env.ADDRESS}</a>
                                 </div>
                             </li>
                             <li>
