--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -30,22 +30,27 @@ import constants from "../../utils/constants";
                         <!-- Begin social links -->
                         <ul class="social-links">
                             <li>
-                                <a href="#!" title="Facebook">
+                                <a href="https://www.youtube.com/channel/UCNJ_3AxxedNDGDm1foZN_-Q" target="_blank" title="Youtube">
+                                    <svg viewBox="0 0 564 512"><use xlink:href="/assets/img/sprite.svg#youtube-icon"></use></svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!" target="_blank" title="Facebook">
                                     <svg viewBox="0 0 320 512"><use xlink:href="/assets/img/sprite.svg#facebook-icon"></use></svg>
                                 </a>
                             </li>
                             <li>
-                                <a href="#!" title="Instagram">
+                                <a href="#!" target="_blank" title="Instagram">
                                     <svg viewBox="0 0 448 512"><use xlink:href="/assets/img/sprite.svg#instagram-icon"></use></svg>
                                 </a>
                             </li>
                             <li>
-                                <a href="#!" title="LinkedIn">
+                                <a href="#!" target="_blank" title="LinkedIn">
                                     <svg viewBox="0 0 448 512"><use xlink:href="/assets/img/sprite.svg#linkedin-icon"></use></svg>
                                 </a>
                             </li>
                             <li>
-                                <a href="#!" title="Twitter">
+                                <a href="#!" target="_blank" title="Twitter">
                                     <svg viewBox="0 0 512 512"><use xlink:href="/assets/img/sprite.svg#twitter-icon"></use></svg>
                                 </a>
                             </li>
