--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -118,14 +118,14 @@ import constants from "../../utils/constants";
                             <li>
                                 <i class="material-icons md-22 footer-contact-tel">smartphone</i>
                                 <div class="footer-contact-info">
-                                    <a href="#!" class="formingHrefTel">{import.meta.env.MOBILE_MAIN}</a>
-                                    <a href="#!" class="formingHrefTel">{import.meta.env.MOBILE_SECONDARY}</a>
+                                    <a href="#!" class="formingHrefTel">{constants.MOBILE_MAIN}</a>
+                                    <a href="#!" class="formingHrefTel">{constants.MOBILE_SECONDARY}</a>
                                 </div>
                             </li>
                             <li>
                                 <i class="material-icons md-22 footer-contact-email">email</i>
                                 <div class="footer-contact-info">
-                                    <a href="mailto:rigon@gmail.com">{import.meta.env.EMAIL}</a>
+                                    <a href="mailto:rigon@gmail.com">{constants.EMAIL}</a>
                                 </div>
                             </li>
                         </ul>
