--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -110,18 +110,23 @@ import constants from "../../utils/constants";
                                     <li>
                                         <a href="mailto:mail@example.com">
                                             <i class="material-icons md-20">mail_outline</i>
-                                            <span>mail@example.com</span>
+                                            <span>{constants.EMAIL}</span>
                                         </a>
                                     </li>
                                     <li>
                                         <a href="mailto:mail@example.com" class="formingHrefTel">
                                             <i class="material-icons md-20">support_agent</i>
-                                            <span>1-888-777-1234</span>
+                                            <span>{constants.MOBILE_MAIN}</span>
                                         </a>
                                     </li>
                                     <li>
                                         <!-- Begin social links -->
                                         <ul class="social-links">
+                                            <li>
+                                                <a href="https://www.youtube.com/channel/UCNJ_3AxxedNDGDm1foZN_-Q" target="_blank" title="Youtube">
+                                                    <svg viewBox="0 0 564 512"><use xlink:href="/assets/img/sprite.svg#youtube-icon"></use></svg>
+                                                </a>
+                                            </li>
                                             <li>
                                                 <a href="#!" title="Facebook">
                                                     <svg viewBox="0 0 320 512"><use xlink:href="/assets/img/sprite.svg#facebook-icon"></use></svg>
