--- a/src/components/NotFound.astro
+++ b/src/components/NotFound.astro
@@ -15,13 +15,13 @@ const { title, description } = Astro.props;
                     <a href="/" class="btn btn-small btn-with-icon ripple">
                         <span>Inicio</span>
                         <svg class="btn-icon-right" viewBox="0 0 13 9" width="13" height="9">
-                            <use xlink:href="assets/img/sprite.svg#arrow-right"></use>
+                            <use xlink:href="/assets/img/sprite.svg#arrow-right"></use>
                         </svg>
                     </a>
                     <a href="/contact" class="btn btn-small btn-border btn-with-icon ripple">
                         <span>Contáctanos</span>
                         <svg class="btn-icon-right" viewBox="0 0 13 9" width="13" height="9">
-                            <use xlink:href="assets/img/sprite.svg#arrow-right"></use>
+                            <use xlink:href="/assets/img/sprite.svg#arrow-right"></use>
                         </svg>
                     </a>
                 </div>
