--- a/src/components/ServiceCard.astro
+++ b/src/components/ServiceCard.astro
@@ -3,14 +3,16 @@ const { className, icon, title, description, id } = Astro.props;
 ---
 
 <div class={`${className} item`}>
-    <a href={`/services/${id}`} class="iitem item-style">
-        <div class="iitem-icon">
-            <i class="material-icons material-icons-outlined md-48">{icon}</i>
-        </div>
-        <div class="iitem-icon-bg">
-            <i class="material-icons material-icons-outlined">{icon}</i>
-        </div>
-        <h3 class="iitem-heading item-heading-large">{title}</h3>
-        <div class="iitem-desc">{description}</div>
-    </a>
+  <a href={`/services/${id}`} class="iitem item-style">
+    <div class="iitem-icon">
+      <i class="material-icons material-icons-outlined md-48">{icon}</i>
+    </div>
+    <div class="iitem-icon-bg">
+      <i class="material-icons material-icons-outlined">{icon}</i>
+    </div>
+    <h3 class="iitem-heading item-heading-large">
+      {title}
+    </h3>
+    <div class="iitem-desc">{description}</div>
+  </a>
 </div>
