--- a/src/components/ServiceCard.astro
+++ b/src/components/ServiceCard.astro
@@ -4,13 +4,16 @@ const { className, icon, title, description, id } = Astro.props;
 
 <div class={`${className} item`}>
   <a href={`/services/${id}`} class="iitem item-style">
-    <div class="iitem-icon">
+    <div class="iitem-icon" transition:name={`service-icon-${id}`}>
       <i class="material-icons material-icons-outlined md-48">{icon}</i>
     </div>
     <div class="iitem-icon-bg">
       <i class="material-icons material-icons-outlined">{icon}</i>
     </div>
-    <h3 class="iitem-heading item-heading-large">
+    <h3
+      class="iitem-heading item-heading-large"
+      transition:name={`service-title-${id}`}
+    >
       {title}
     </h3>
     <div class="iitem-desc">{description}</div>
